--- a/tools/seqprep/.shed.yml
+++ b/tools/seqprep/.shed.yml
@@ -1,9 +1,13 @@
-owner: iuc
 name: seqprep
-description: 
+owner: DEIN_GALAXY_TOOLSHED_BENUTZERNAME
+description: Tool for merging paired-end Illumina reads and trimming adapters.
+homepage_url: https://github.com/jstjohn/SeqPrep
 long_description: |
-  
-remote_repository_url: 
+    SeqPrep is a program designed to merge paired-end Illumina reads that are overlapping into a single longer read and to trim adapters.
+    It is particularly useful for preparing reads for downstream applications like genome assembly and SNP calling.
+    The tool works by identifying and merging reads that are overlapping and trimming adapters based on user-defined sequences or default parameters.
+  remote_repository_url: https://github.com/DEIN_GITHUB_REPOSITORY_URL/tools-iuc/tree/master/tools/seqprep
 categories:
-  - 
-homepage_url:
+- Sequence Analysis
+- RNA
+- Preprocessing
